--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="eNE-xy-d11" id="aOo-2d-859"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="deI-of-hsW"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="deI-of-hsW">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="w7i-Tf-4YK">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="eNE-xy-d11" id="Adn-E9-018"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ypx-ho-mep" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
